[package]
name = "block_chain"
version = "0.1.0"
authors = ["Dengjianping <djptux@gmail.com>"]
build = "build.rs"
edition = "2018"

[build-dependencies]
cmake = "0.1"


[dependencies]
actix = "0.7"
actix-redis = "0.5"
actix-web = { version = "0.7", features = ["ssl"] }
openssl = "0.10"
env_logger = "0.5"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = "0.7"
toml = "0.4"
num_cpus = "1.9"
futures = "0.1"
chrono = { version = "0.4", features = ["serde", "rustc-serialize"] }
diesel = { version = "1.3", features = ["postgres", "r2d2", "chrono"] }
dotenv = "0.13"
digest = "0.8"
sha2 = "0.8"
lazy_static = "1.2"
bytes = "0.4"
byteorder = "1.2"
libc = "0.2"

#[features]
#default = ["cpu"]
#cpu = []
#cuda = [] # use gpu to caculate hash value, but not default

[profile.release]
opt-level = 2
lto = true